--- a/Yoshi.theme.css
+++ b/Yoshi.theme.css
@@ -1922,10 +1922,10 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 }
 .theme-dark .message-group .comment .markup code.inline {
     background-color: rgba(64, 135, 43,.5);
-    padding-top: 3px;
-    padding-bottom: 3px;
+    padding-top: 1px;
+    padding-bottom: 1px;
     font-size: 15px;
-    text-shadow: 1px 3px 1px #000, 1px 3px 1px #000;
+    text-shadow: 1px 1px 1px #000;
     border: 2px solid black;
 }
 .guilds-wrapper .guilds-add {
