--- a/Bowser.theme.css
+++ b/Bowser.theme.css
@@ -1862,7 +1862,7 @@ a, .theme-dark .emptyStateNote-_gUBTA {
     padding-top: 1px;
     padding-bottom: 1px;
     font-size: 13px;
-    text-shadow: 1px 2px 3px #000, 1px 2px 3px #000;
+    text-shadow: 1px 1px 1px #000;
     border: 1px solid black;
 }
 .guilds-wrapper .guilds-add {
