--- a/Mario.theme.css
+++ b/Mario.theme.css
@@ -1893,10 +1893,10 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 }
 .theme-dark .message-group .comment .markup code.inline {
     background-color: rgba(67,95,171,.5);
-    padding-top: 3px;
-    padding-bottom: 3px;
+    padding-top: 1px;
+    padding-bottom: 1px;
     font-size: 13px;
-    text-shadow: 1px 3px 1px #000, 1px 3px 1px #000;
+    text-shadow: 1px 1px 1px #000;
     border: 2px solid black;
 }
 .guilds-wrapper .guilds-add {
