--- a/Luigi.theme.css
+++ b/Luigi.theme.css
@@ -1874,10 +1874,10 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 }
 .theme-dark .message-group .comment .markup code.inline {
     background-color: rgba(40,74,18,.5);
-    padding-top: 3px;
-    padding-bottom: 3px;
+    padding-top: 1px;
+    padding-bottom: 1px;
     font-size: 17px;
-    text-shadow: 1px 3px 1px #000, 1px 3px 1px #000;
+    text-shadow: 1px 1px 1px #000;
     border: 2px solid black;
 }
 .guilds-wrapper .guilds-add {
