--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -1683,11 +1683,7 @@ form,
 .message-group .edit-message .edit-operation>a {
    color: pink;
 }
-:root {
-  --Popout-Main-Colour: white;
-  --Popout-Background: url(https://orig00.deviantart.net/7099/f/2016/357/0/6/chocola___nekopara_by_carionto-dasmhin.png);
-  --Popout-Text-Shadow-Colour:rgba(0,0,0, .45);
-}
+
 .statusOnline-1Mp2_H {
     background-color: #644f4f;
     border-radius: 1px;
@@ -1806,10 +1802,15 @@ form,
 .avatar-profile{
 	border-radius: 0!important;
 }
-#user-profile-modal .header .header-info .header-info-inner .discord-tag,#user-profile-modal .header .header-info .header-info-inner .discord-tag .discriminator,.tab-bar.tabBar-2z50ux .tabBarItem-1Lg555.selected,#user-profile-modal .tab-bar .tab-bar-item,#user-profile-modal .guilds .section .section-header,.theme-dark .note-2AtC_s textarea ,#user-profile-modal .guilds .section .connected-accounts .connected-account .connected-account-name-inner .connected-account-name,#user-profile-modal .guilds .guild,.guildNick-1oZKE3, .listName-1Xr1Jk,.headerUsernameNoNickname-1iGxNP,.headerTagNormal-KyD3_J,.headerActivityText-3qBQRo,.bodyTitle-18hsd9,#user-profile-modal .header .header-info .header-info-inner .activity{
-	color:var(--Popout-Main-Colour)!important;
+#user-profile-modal .header .header-info .header-info-inner .discord-tag,#user-profile-modal .header .header-info .header-info-inner .discord-tag .discriminator,#user-profile-modal .tab-bar .tab-bar-item,.userInfoSectionHeader-pmdPGs,.theme-dark .note-2AtC_s textarea ,#user-profile-modal .guilds .section .connected-accounts .connected-account .connected-account-name-inner .connected-account-name,#user-profile-modal .guilds .guild,.guildNick-1oZKE3, .listName-1Xr1Jk,.headerUsernameNoNickname-1iGxNP,.headerTagNormal-KyD3_J,.headerActivityText-3qBQRo,.bodyTitle-18hsd9,#user-profile-modal .header .header-info .header-info-inner .activity{
+	color: white !important;
 }
-
+.tab-bar.tabBar-2z50ux .tabBarItem-1Lg555.selected {
+       color: white;
+}
+.theme-dark .connectedAccount-3mKaTA, .theme-dark .userInfoSection-2WJxMm+.userInfoSection-2WJxMm {
+    border-color: transparent;
+}
 .avatarHint-2ohlkz{
 	border-radius:0!important;
 	width: 100%!important;
@@ -1818,9 +1819,11 @@ form,
 	left: -1.5%!important;
 }
 	
-.root-2sNHUF,.userPopout-11hFKo {
-	background:var(--Popout-Background)50% 50%/cover!important;
-	text-shadow: 0 0 6px var(--Popout-Text-Shadow-Colour), 0 0 6px var(--Popout-Text-Shadow-Colour), 0 0 5px var(--Popout-Text-Shadow-Colour), 0 0 4px var(--Popout-Text-Shadow-Colour)!important;
+.root-2sNHUF {
+	background: url(https://img00.deviantart.net/2f84/i/2016/129/6/a/nekopara___chocola_wallpaper_by_seira_hirano-da1x5gc.png) 50% 50%/cover!important;
+}
+.userPopout-11hFKo {
+	background: url(https://i.imgur.com/ACQN8vU.png) 50% 50%/cover!important;
 }
 .topSectionPlaying-3jAH9b {
     background: rgba(0, 0, 255,0.4);
@@ -2145,7 +2148,7 @@ form,
     color: #795f72;
 }
 .spinner-wandering-cubes .spinner-item {
-    background-color: #53B047;
+    background-color: #795f72;
 }
 /* New Emote Stuff */
 .bda-dark .emoji-picker, 
