--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -440,6 +440,18 @@
     background-color: black;
     border-color: transparent;
 }
+[class*="iconInactive-WWHQEI icon-mr9wAc iconMargin-2Js7V9"][name*="PersonPlus"] {
+    background-image: url(https://png.icons8.com/material/40/FFFFFF/person-male.png);
+    background-size: cover;
+}
+[class*="iconInactive-WWHQEI icon-mr9wAc iconMargin-2Js7V9"][name*="Phone"] {
+    background-image: url(https://png.icons8.com/material/40/FFFFFF/cell-phone.png);
+    background-size: cover;
+}
+[class*="iconInactive-WWHQEI icon-mr9wAc iconMargin-2Js7V9"][name*="VideoCamera"] {
+    background-image: url(https://png.icons8.com/material/40/FFFFFF/camcorder-pro.png);
+    background-size: cover;
+}
 [class*="iconActive-3K4uxh icon-mr9wAc iconMargin-2Js7V9"][name*="People"] {
        background-image: url(https://png.icons8.com/material/24/9C9A9A/conference-call.png);
 }
