--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -287,25 +287,25 @@
 }
 /* Button Tooltips */
 /* Mute Tooltip */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 120.998px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 121px;"] {
        left: 198px !important;
-       top: 725.566px !important;
+       top: 655.566px !important;
 }
 
 /* Deafen Tooltip */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.495px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146px;"] {
      left: 224px !important;
-     top: 725.566px !important;
+     top: 655.566px !important;
 }
 /* UnMute Tooltip */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 109.998px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 110px; top: 621px;"] {
      left: 187px !important;
-     top: 725.566px !important;
+     top: 655.566px !important;
 }
 /* UnDeafen  Tooltip */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.995px;"] {
+[class*="tooltip tooltip-top tooltip-black"][style="left: 137px; top: 621px;"] {
     left: 213px !important;
-    top: 725.566px !important;
+    top: 655.566px !important;
 }
 @keyframes fadeIn {
   0% {opacity: 0;}
