--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -287,23 +287,23 @@
 }
 /* Button Tooltips */
 /* Mute Tooltip */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 121px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 121px;"] {
        left: 198px !important;
        top: 655.566px !important;
 }
 
 /* Deafen Tooltip */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 146px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 146px;"] {
      left: 224px !important;
      top: 655.566px !important;
 }
 /* UnMute Tooltip */
-[class*="tooltip tooltip-top tooltip-black"][style*="left: 110px; top: 621px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 110px"] {
      left: 187px !important;
      top: 655.566px !important;
 }
 /* UnDeafen  Tooltip */
-[class*="tooltip tooltip-top tooltip-black"][style="left: 137px; top: 621px;"] {
+[class="tooltip tooltip-top tooltip-black"][style*="left: 137px"] {
     left: 213px !important;
     top: 655.566px !important;
 }
