--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -452,7 +452,8 @@
     background-image: url(https://png.icons8.com/material/40/FFFFFF/camcorder-pro.png);
     background-size: cover;
 }
-[class*="iconActive-3K4uxh icon-mr9wAc iconMargin-2Js7V9"][name*="People"] {
+[class*="iconActive-3K4uxh icon-mr9wAc iconMargin-2Js7V9"][name*="People"],
+[class*="iconInactive-WWHQEI icon-mr9wAc iconMargin-2Js7V9"][name*="People"] {
        background-image: url(https://png.icons8.com/material/24/9C9A9A/conference-call.png);
 }
 [class*="iconInactive-WWHQEI icon-mr9wAc iconMargin-2Js7V9"][name*="Mention"],
