--- a/Twitch.theme.css
+++ b/Twitch.theme.css
@@ -7,6 +7,9 @@
 * { 
     font-family: Marvel !important;
 }
+.ace-monokai .ace_comment {
+    color: #e5e5e5;
+}
 /* fix not having a background image anymore */
 .layers-20RVFW, .layer-kosS71, .container-2OU7Cz, .typing-3eiiL_ {
   background: transparent !important;
