--- a/Bowser.theme.css
+++ b/Bowser.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Bowser","description":"The Great Bowser Theme","author":"DevilsTheAvenged","version":"1.8"}*//{}
+//META{"name":"Bowser","description":"The Great Bowser Theme","author":"DevilsTheAvenged","version":"1.9"}*//{}
 @import url(https://rawgit.com/DevilsLynAvenged/Other-Workspace/master/SomeUnImportantStuff/ThemeFixerv2.theme.css);
 .app,
 .callout-backdrop,
@@ -106,7 +106,7 @@
 .topSectionPlaying-3jAH9b {
     background: rgba(0, 0, 255,0.4);
 }
-.topSectionNormal-2LlRG1 {
+.theme-dark .topSectionNormal-2LlRG1 {
     background-color: rgba(0, 0, 0,0.1);
 }
 #user-profile-modal .guilds .section+.section {
@@ -309,7 +309,7 @@
     background: rgba(0, 0, 0, 0.3) !important;
     color: white;
 }
-.theme-dark .quickMessage-28pD5Y {
+.theme-dark .quickMessage-OCo-Q0 {
     background: rgba(7,6,5,0.4);
     border: 3px solid #C43F28;
     border-radius: 1px;
@@ -317,7 +317,7 @@
 .chat .divider>div {
     display: none;
 }
-.theme-dark .quickMessage-28pD5Y:focus {
+.theme-dark .quickMessage-OCo-Q0:focus {
     border: 3px solid #53B047;
     color: white;
 }
@@ -582,10 +582,10 @@
     height: 100%;
 }
 .progress {
-   background-color: #53B047;
- }
+    background-color: #53B047;
+  }
 .progress .progress-bar {
-  background-color: #070605;
+   background-color: #070605;
 }
 #bd-settingspane-container .ui-switch-item .ui-switch-wrapper .ui-switch.checked {
     background: #53B047;
@@ -1061,7 +1061,7 @@ color: white !important;
 .themeDefault-3M0dJU.sizeDefault-rZbSBU {
     background: #C43F28 !important;
 }
-.theme-dark .primary-2giqSn,.theme-dark .defaultColor-v22dK1, .theme-dark .title-3i-5G_, .theme-dark .h5-3KssQU, .theme-dark .ui-select>.Select .Select-control .Select-placeholder,.theme-dark .descChecked-KbaI-r, .theme-dark .titleChecked-3Ngoss, .theme-dark .channelName-g_kAQT, .channelNameByline-1v_o14, .icon-3w_81G{
+.theme-dark .primary-2giqSn,.theme-dark .defaultColor-v22dK1, .theme-dark .title-3i-5G_, .theme-dark .h5-3KssQU, .theme-dark .select-3JqNgs .Select-control .Select-placeholder,.theme-dark .descChecked-KbaI-r, .theme-dark .titleChecked-3Ngoss, .theme-dark .channelName-g_kAQT, .channelNameByline-1v_o14, .icon-3w_81G{
     color: white !important;
 }
 .theme-dark .checked-2TahvT[style*="background-color: rgb(114, 137, 218); border-color: rgb(114, 137, 218);"] {
@@ -2009,10 +2009,10 @@ a, .theme-dark .emptyStateNote-_gUBTA {
 .contextMenu-uoJTbz {
    background: black;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     background: black;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     box-shadow: none;
     border: none;
 }
