--- a/BrownMaterial.theme.css
+++ b/BrownMaterial.theme.css
@@ -287,25 +287,128 @@
 }
 /* Button Tooltips */
 /* Mute Tooltip */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 121px;"] {
+/* Zoom Level 50% */
+[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 1337px;"] {
+       left: 198px !important;
+       top: 1375.866px !important;
+}
+/* Zoom Level 67% */
+[class="tooltip tooltip-top tooltip-black"][style*="left: 120.933px; top: 973.679px;"] {
+       left: 196px !important;
+       top: 1010.966px !important;
+}
+/* Zoom Level 75% */
+[class="tooltip tooltip-top tooltip-black"][style="left: 121px; top: 858px;"] {
+       left: 196px !important;
+       top: 897.566px !important;
+}
+/* Zoom Level 80% */
+[class="tooltip tooltip-top tooltip-black"][style*="left: 120.996px; top: 798.012px;"] {
+       left: 198px !important;
+       top: 835.566px !important;
+}
+/* Zoom Level 90% */
+[class="tooltip tooltip-top tooltip-black"][style*="left: 120.998px; top: 698.014px;"] {
+       left: 198px !important;
+       top: 737.566px !important;
+}
+/* Zoom Level 100% */
+[class="tooltip tooltip-top tooltip-black"][style*="left: 121px; top: 617px;"] {
        left: 198px !important;
        top: 655.566px !important;
 }
-
 /* Deafen Tooltip */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 146px;"] {
-     left: 224px !important;
+/* Zoom Level 50% */
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146px; top: 1337px;"] {
+     left: 222px !important;
+     top: 1375.866px !important;
+}
+/* Zoom Level 67% */
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 146.429px; top: 973.679px;"] {
+     left: 222px !important;
+     top: 1010.966px !important;
+}
+/* Zoom Level 75% */
+[class*="tooltip tooltip-top tooltip-black"][style="left: 146.5px; top: 858px;"] {
+     left: 222px !important;
+     top: 897.566px !important;
+}
+/* Zoom Level 80% */
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 145.988px; top: 798.012px;"] {
+     left: 222px !important;
+     top: 835.566px !important;
+}
+/* Zoom Level 90% */
+[class*="tooltip tooltip-top tooltip-black"][style="left: 146.495px; top: 698.014px;"] {
+     left: 222px !important;
+     top: 737.566px !important;
+}
+/* Zoom Level 100% */
+[class*="tooltip tooltip-top tooltip-black"][style="left: 146px; top: 617px;"] {
+     left: 222px !important;
      top: 655.566px !important;
 }
 /* UnMute Tooltip */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 110px"] {
-     left: 187px !important;
-     top: 655.566px !important;
+/* Zoom Level 50% */
+[class="tooltip tooltip-top tooltip-black"][style*="left: 110px; top: 1337px;"] {
+       left: 187px !important;
+       top: 1375.866px !important;
+}
+/* Zoom Level 67% */
+[class="tooltip tooltip-top tooltip-black"][style*="left: 109.933px; top: 973.679px;"] {
+       left: 187px !important;
+       top: 1010.966px !important;
+}
+/* Zoom Level 75% */
+[class="tooltip tooltip-top tooltip-black"][style="left: 109.5px; top: 858px;"] {
+       left: 187px !important;
+       top: 897.566px !important;
+}
+/* Zoom Level 80% */
+[class="tooltip tooltip-top tooltip-black"][style*="left: 109.496px; top: 797.992px;"] {
+       left: 187px !important;
+       top: 835.566px !important;
+}
+/* Zoom Level 90% */
+[class="tooltip tooltip-top tooltip-black"][style*="left: 109.998px; top: 698.014px;"] {
+       left: 187px !important;
+       top: 737.566px !important;
+}
+/* Zoom Level 100% */
+[class="tooltip tooltip-top tooltip-black"][style="left: 110px; top: 617px;"] {
+       left: 187px !important;
+       top: 655.566px !important;
 }
 /* UnDeafen  Tooltip */
-[class="tooltip tooltip-top tooltip-black"][style*="left: 137px"] {
-    left: 213px !important;
-    top: 655.566px !important;
+/* Zoom Level 50% */
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 1337px;"] {
+     left: 215px !important;
+     top: 1375.866px !important;
+}
+/* Zoom Level 67% */
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.429px; top: 973.679px;"] {
+     left: 215px !important;
+     top: 1010.966px !important;
+}
+/* Zoom Level 75% */
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 137px; top: 858px;"] {
+     left: 215px !important;
+     top: 897.566px !important;
+}
+/* Zoom Level 80% */
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.488px; top: 797.992px;"] {
+     left: 215px !important;
+     top: 835.566px !important;
+}
+/* Zoom Level 90% */
+[class*="tooltip tooltip-top tooltip-black"][style*="left: 136.995px; top: 698.014px;"] {
+     left: 215px !important;
+     top: 737.566px !important;
+}
+/* Zoom Level 100% */
+[class*="tooltip tooltip-top tooltip-black"][style="left: 137px; top: 617px;"] {
+     left: 215px !important;
+     top: 655.566px !important;
 }
 @keyframes fadeIn {
   0% {opacity: 0;}
@@ -841,7 +944,7 @@ a,
     border: none;
     box-shadow: none;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     background: #1d1f23;
     box-shadow: none;
 }
