--- a/ChocolaTheme.theme.css
+++ b/ChocolaTheme.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"ChocolaTheme","description":"Just an average Chocola Theme","author":"DevilsTheAvenged","version":"1.8"}*//{}
+//META{"name":"ChocolaTheme","description":"Just an average Chocola Theme","author":"DevilsTheAvenged","version":"1.9"}*//{}
 .app,
 .callout-backdrop,
 .bda-backdrop,
@@ -346,11 +346,11 @@ form,
 
 .theme-dark .description-3MVziF,
 .theme-dark .labelDescriptor-1BebCl,
-.theme-dark .ui-select>.Select .Select-control .Select-placeholder {
+.theme-dark .select-3JqNgs .Select-control .Select-placeholder {
 	color: white;
 }
 
-.theme-dark .ui-select>.Select .Select-menu-outer {
+.theme-dark .select-3JqNgs .Select-menu-outer {
 	background: rgba(86, 67, 75, 0.95);
 	border-color: rgba(255, 255, 255, 0.3);
 }
@@ -1747,7 +1747,7 @@ form,
 .theme-dark .footer-1PYmcw {
     background-color: #40323c;
 }
-.theme-dark .listRow-1wEi-U:hover,#user-profile-modal .guilds .section+.section,#user-profile-modal .avatarWrapper-2Gfmp1, #user-profile-modal .scroller,#user-profile-modal .avatar-wrapper,#user-profile-modal .empty,#user-profile-modal .tab-bar-container,#user-profile-modal .header:after,.userPopout-11hFKo, .theme-dark .quickMessage-28pD5Y,#user-profile-modal .header,.userPopout-11hFKo {
+.theme-dark .listRow-1wEi-U:hover,#user-profile-modal .guilds .section+.section,#user-profile-modal .avatarWrapper-2Gfmp1, #user-profile-modal .scroller,#user-profile-modal .avatar-wrapper,#user-profile-modal .empty,#user-profile-modal .tab-bar-container,#user-profile-modal .header:after,.userPopout-11hFKo, .theme-dark .quickMessage-OCo-Q0,#user-profile-modal .header,.userPopout-11hFKo {
 	background:transparent!important;
 	border: none!important;
 }
@@ -1797,7 +1797,7 @@ form,
 .topSectionPlaying-3jAH9b {
     background: rgba(0, 0, 255,0.4);
 }
-.topSectionNormal-2LlRG1 {
+.theme-dark .topSectionNormal-2LlRG1 {
     background-color: rgba(0, 0, 0,0.1);
 }
 #user-profile-modal .actions .btn.add-friend {
@@ -2015,10 +2015,10 @@ form,
 .contextMenu-uoJTbz {
    background: #4C364F;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     background: #4C364F;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     box-shadow: none;
     border: none;
 }
