--- a/DoritosTheme.theme.css
+++ b/DoritosTheme.theme.css
@@ -1,8 +1,8 @@
-//META{"name":"DoritosTheme","description":"Enjoy the Video Game Culture","author":"DevilsTheAvenged","version":"1.8"}*//{}
+//META{"name":"DoritosTheme","description":"Enjoy the Video Game Culture","author":"DevilsTheAvenged","version":"1.9"}*//{}
 @import url(https://cdn.rawgit.com/DevilsLynAvenged/Other-Workspace/edc4ddcb/SomeUnImportantStuff/Doritos2.theme.css);
 /* Backgrounds */
 .app {
-	background-image: url("https://is01.ezphotoshare.com/2017/10/21/shrip0.jpg");
+	background-image: url("https://i.ytimg.com/vi/RkxNapO7uWQ/maxresdefault.jpg");
 	background-size: cover !important;
 	background-position: center !important;
  }
@@ -372,7 +372,7 @@
      left: 4px;
  }
  .channel-members-loading { display: none }
-.theme-dark .quickMessage-28pD5Y {
+.theme-dark .quickMessage-OCo-Q0 {
   background: black;
   border-color: #D90307;
   border-style: solid;
@@ -460,7 +460,7 @@
 .topSectionPlaying-3jAH9b {
     background: rgba(0, 0, 255,0.4);
 }
-.topSectionNormal-2LlRG1 {
+.theme-dark .topSectionNormal-2LlRG1 {
     background-color: rgba(0, 0, 0,0.1);
 }
 .root-2sNHUF {
@@ -543,7 +543,7 @@ background: rgba(217, 3, 7,0.3);
      background-color: rgba(217, 3, 7,0.7);
      border-radius: 0px 0px 29px 29px;
 }
-.theme-dark .defaultColor-v22dK1, .theme-dark .guildName-1u0hy7, .theme-dark .override-251XCL, .theme-dark .overrideHighlight-2DXyuU, .theme-dark .title-3i-5G_, .theme-dark .description-3MVziF, .theme-dark .labelDescriptor-1BebCl, .theme-dark .h5-3KssQU, .theme-dark .ui-select>.Select .Select-control .Select-placeholder, .channelNameByline-1v_o14, .theme-dark .channelName-g_kAQT, .theme-dark .primary-2giqSn {
+.theme-dark .defaultColor-v22dK1, .theme-dark .guildName-1u0hy7, .theme-dark .override-251XCL, .theme-dark .overrideHighlight-2DXyuU, .theme-dark .title-3i-5G_, .theme-dark .description-3MVziF, .theme-dark .labelDescriptor-1BebCl, .theme-dark .h5-3KssQU, .theme-dark .select-3JqNgs .Select-control .Select-placeholder, .channelNameByline-1v_o14, .theme-dark .channelName-g_kAQT, .theme-dark .primary-2giqSn {
     color: #FD5E00;
 }
 .title-1M-Ras {
@@ -2199,10 +2199,10 @@ background: #730000 !important;
 .contextMenu-uoJTbz {
    background: black;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     background: black;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     box-shadow: none;
     border: none;
 }
