--- a/EpicBubbleTheme.theme.css
+++ b/EpicBubbleTheme.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"The_Epic_Bubble_Theme","description":"Neat Bubble Theme","author":"DevilsTheAvenged","version":"1.8"}*//{}
+//META{"name":"The_Epic_Bubble_Theme","description":"Neat Bubble Theme","author":"DevilsTheAvenged","version":"1.9"}*//{}
 
 .app,
 .callout-backdrop,
@@ -1049,7 +1049,7 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
     box-shadow: none;
     border-radius: 50px
 }
-.theme-dark .ui-select>.Select .Select-control .Select-placeholder {
+.theme-dark .select-3JqNgs .Select-control .Select-placeholder {
     color: black;
 }
 .theme-dark .modal-3HOjGZ,.theme-dark .footer-1PYmcw {
@@ -1085,7 +1085,7 @@ a, .theme-dark .message-group a,.chat .welcome-message h1,.theme-dark .chat .wel
     background-color: black;
     box-shadow: none;
 }
-.theme-dark .ui-select>.Select .Select-menu-outer {
+.theme-dark .select-3JqNgs .Select-menu-outer {
     background: rgba(255,255,255,0.3);
     border-color: black;
     box-shadow: none;
@@ -1895,14 +1895,14 @@ color: white !important;
 .protip {
     display: none;
 }
-.theme-dark .quickMessage-28pD5Y {
+.theme-dark .quickMessage-OCo-Q0 {
     background: none;
     border-radius: 50px;
     padding: 8px 10px;
     border: none;
     color: white;
 }
-.theme-dark .quickMessage-28pD5Y:focus {
+.theme-dark .quickMessage-OCo-Q0:focus {
     background: rgba(255, 255, 255,0.12);
     border: none;
     padding: 8px 10px;
@@ -1926,7 +1926,7 @@ color: white !important;
 .topSectionPlaying-3jAH9b {
     background: rgba(0,0,255,0.3);
 }
-.topSectionNormal-2LlRG1 {
+.theme-dark .topSectionNormal-2LlRG1 {
     background-color: rgba(0,0,0,0.3);
 }
 .theme-dark .body-3_tdh6 {
@@ -2106,14 +2106,14 @@ color: white !important;
    color: black !important;
    border-radius: 30px;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     background: black;
     border-radius: 30px;
     width: 145px;
     padding-left: 12px;
     padding-right: 12px;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     box-shadow: none;
     border: none;
 }
