--- a/MountainDew.theme.css
+++ b/MountainDew.theme.css
@@ -1,8 +1,7 @@
-//META{"name":"MountainDew","description":"Enjoy the Video Game Culture","author":"DevilsTheAvenged","version":"1.8"}*//{}
+//META{"name":"MountainDew","description":"Enjoy the Video Game Culture","author":"DevilsTheAvenged","version":"1.9"}*//{}
 /* Backgrounds */
-.app,
-.callout-backdrop,#pubs-container:before,.bda-backdrop {
-	background-image: url("https://i.imgur.com/fmeLWYL.jpg");
+.app {
+	background-image: url("https://images6.alphacoders.com/631/631863.jpg");
 	background-size: cover !important;
 	background-position: center !important;
 }
@@ -363,7 +362,7 @@
    display: none;
 }
 .channel-members-loading { display: none }
-.theme-dark .quickMessage-28pD5Y {
+.theme-dark .quickMessage-OCo-Q0 {
   background: black;
   border-color: #147b04;
   border-style: solid;
@@ -456,7 +455,7 @@
 .topSectionPlaying-3jAH9b {
     background: rgba(0, 0, 255,0.4);
 }
-.topSectionNormal-2LlRG1 {
+.theme-dark .topSectionNormal-2LlRG1 {
     background-color: rgba(0, 0, 0,0.1);
 }
 #user-profile-modal .actions .btn.add-friend:hover {
@@ -547,7 +546,7 @@ background: rgba(14,84,3,0.3);
      background-color: rgba(14,84,3,0.7);
      border-radius: 0px 0px 29px 29px;
 }
-.theme-dark .defaultColor-v22dK1, .theme-dark .guildName-1u0hy7, .theme-dark .override-251XCL, .theme-dark .overrideHighlight-2DXyuU, .theme-dark .title-3i-5G_, .theme-dark .description-3MVziF, .theme-dark .labelDescriptor-1BebCl, .theme-dark .h5-3KssQU, .theme-dark .ui-select>.Select .Select-control .Select-placeholder, .channelNameByline-1v_o14, .theme-dark .channelName-g_kAQT, .theme-dark .primary-2giqSn {
+.theme-dark .defaultColor-v22dK1, .theme-dark .guildName-1u0hy7, .theme-dark .override-251XCL, .theme-dark .overrideHighlight-2DXyuU, .theme-dark .title-3i-5G_, .theme-dark .description-3MVziF, .theme-dark .labelDescriptor-1BebCl, .theme-dark .h5-3KssQU, .theme-dark .select-3JqNgs .Select-control .Select-placeholder, .channelNameByline-1v_o14, .theme-dark .channelName-g_kAQT, .theme-dark .primary-2giqSn {
     color: #e7e7e7;
 }
 .title-1M-Ras {
@@ -2378,10 +2377,10 @@ background: #006622 !important;
    background: #94C947;
    color: white !important;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     background: #014713;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     box-shadow: none;
     border: none;
 }
