--- a/NewJerseyDevils.theme.css
+++ b/NewJerseyDevils.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"NewJerseyDevils","description":"New Jersey Rules","author":"DevilsTheAvenged","version":"1.8"}*//{}
+//META{"name":"NewJerseyDevils","description":"New Jersey Rules","author":"DevilsTheAvenged","version":"1.9"}*//{}
 
 .app,
 .callout-backdrop,
@@ -42,7 +42,7 @@
 .topSectionSpotify-3744IX {
     background: rgba(76, 175, 80,0.4);
 }
-.theme-dark .autocomplete-1TnWNR, .theme-dark .ui-select>.Select .Select-menu-outer  {
+.theme-dark .autocomplete-1TnWNR, .theme-dark .select-3JqNgs .Select-menu-outer  {
   background-color: black;
   border: 3px solid #C8102E;
 }
@@ -958,7 +958,7 @@ a, .theme-dark .primary-2giqSn, .user-settings-connections .connection-header .c
 .body-3rkFrF {
   border-bottom: none;
 }
-.theme-dark .quickMessage-28pD5Y {
+.theme-dark .quickMessage-OCo-Q0 {
     color: white;
     background: black;
     border: 3px solid #C8102E;
@@ -1032,7 +1032,7 @@ a, .theme-dark .primary-2giqSn, .user-settings-connections .connection-header .c
 #user-profile-modal .header {
    background-image: none;
 }
-.topSectionNormal-2LlRG1 {
+.theme-dark .topSectionNormal-2LlRG1 {
     background-color: rgba(0, 0, 0,0.1);
 }
 .root-2sNHUF {
@@ -1335,7 +1335,7 @@ a, .theme-dark .primary-2giqSn, .user-settings-connections .connection-header .c
 .theme-dark .separator-NBIcXB {
    box-shadow: 0 2px 5px 0 black, 0 1px 2px 0 black;
 }
-.theme-dark .ui-select>.Select .Select-control .Select-placeholder {
+.theme-dark .select-3JqNgs .Select-control .Select-placeholder {
     color: white;
 }
 .theme-dark .checkbox-1QwaS4 {
@@ -2034,10 +2034,10 @@ a, .theme-dark .primary-2giqSn, .user-settings-connections .connection-header .c
    background: #B40E29;
    color: white !important;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     background: black;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     box-shadow: none;
     border: none;
 }
