--- a/NoGameNoLife.theme.css
+++ b/NoGameNoLife.theme.css
@@ -921,7 +921,7 @@ a,
 .theme-dark .bubble-17BwqU:before {
     border-top-color: transparent;
 }
-.theme-dark .contextMenu-uoJTbz,
+.theme-dark.contextMenu-uoJTbz,
 .theme-dark.contextMenu-uoJTbz {
     background: #4F1C4F;
     box-shadow: none;
@@ -1607,7 +1607,7 @@ a,
 .theme-dark .body-3ljq11, 
 .theme-dark .footer-2wFs91,
 .theme-dark .headerNormal-3Vn9nT, 
-.topSectionNormal-2LlRG1,
+.theme-dark .topSectionNormal-2LlRG1,
 .theme-dark .body-3_tdh6 {
     background-color: rgba(0,0,0,0.6);
     color: white;
