--- a/RamTheme.theme.css
+++ b/RamTheme.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Ram_Theme","description":"Team Ram Theme","author":"DevilsTheAvenged","version":"1.8"}*//{}
+//META{"name":"Ram_Theme","description":"Team Ram Theme","author":"DevilsTheAvenged","version":"1.9"}*//{}
 .app,.callout-backdrop,#pubs-container:before {
 	background-image: url("https://img00.deviantart.net/6892/i/2016/269/a/9/minimalist_wallpaper___ram__re_zero__by_mrtapoz_kun-daisdq0.jpg");
 	background-size: cover !important;
@@ -1044,7 +1044,7 @@ font-weight: bold;
 .topSectionPlaying-3jAH9b {
     background: rgba(0, 0, 255,0.4);
 }
-.topSectionNormal-2LlRG1 {
+.theme-dark .topSectionNormal-2LlRG1 {
     background-color: rgba(0, 0, 0,0.1);
 }
 #user-profile-modal .actions .btn.add-friend:hover {
@@ -1156,7 +1156,7 @@ font-weight: bold;
 .avatarHintInner-1JYcVr {
 	background: rgba(0, 0, 0, 0.5);
 }
-.theme-dark .quickMessage-28pD5Y {
+.theme-dark .quickMessage-OCo-Q0 {
 	background: rgba(232, 74, 127,0.3);
     border: 3px solid #f08eaf;
 	border-radius: 14px;
@@ -1991,10 +1991,10 @@ div[class*="switchEnabled"][class*=valueChecked] {
    background: #D394AF;
    color: white !important;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     background: #C1678B;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     box-shadow: none;
     border: none;
 }
