--- a/RemTheme.theme.css
+++ b/RemTheme.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Rem_Theme","description":"Team Rem Theme","author":"DevilsTheAvenged","version":"1.8"}*//{}
+//META{"name":"Rem_Theme","description":"Team Rem Theme","author":"DevilsTheAvenged","version":"1.9"}*//{}
 /* Backgrounds */
 .app,#pubs-container:before {
 	background-image: url("https://pre00.deviantart.net/1bd2/th/pre/i/2016/270/e/0/minimalist_wallpaper___rem__re_zero__by_mrtapoz_kun-daj54o1.jpg");
@@ -629,7 +629,7 @@ s:hover, strike:hover, del:hover {
 .avatarHintInner-1JYcVr {
 	background: rgba(0, 0, 0, 0.5);
 }
-.theme-dark .quickMessage-28pD5Y {
+.theme-dark .quickMessage-OCo-Q0 {
 	background: rgba(94, 154, 237,0.3);
     border: 3px solid #a3c5f5;
 	border-radius: 14px;
@@ -734,7 +734,7 @@ u:hover, ins:hover {
 #user-profile-modal .actions .btn.add-friend:hover {
 	background: #8cb7f2;
 }
-.topSectionNormal-2LlRG1 {
+.theme-dark .topSectionNormal-2LlRG1 {
 	background-image:  linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(https://pre00.deviantart.net/26ee/th/pre/f/2016/288/2/9/rem_minimalist__re_zero__by_bakacowdesu-dal5dr3.jpg) !important;
 	background-size: 120% 120%;
 	background-position: center;
@@ -1994,10 +1994,10 @@ color: white;
    background: #83A3BF;
    color: white !important;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     background: #254F79;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     box-shadow: none;
     border: none;
 }
