--- a/TheGreenChristmas.theme.css
+++ b/TheGreenChristmas.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"Green_Christmas_Theme","description":"Merry Christmas","author":"DevilsTheAvenged","version":"1.8"}*//{}
+//META{"name":"Green_Christmas_Theme","description":"Merry Christmas","author":"DevilsTheAvenged","version":"1.9"}*//{}
  /* fix not having a background image anymore */
 .layers-20RVFW, .layer-kosS71, .container-2OU7Cz, .typing-3eiiL_ {
   background: transparent !important;
@@ -406,7 +406,7 @@ a img {
     background: transparent;
     border: none;
 }
-.theme-dark .ui-select>.Select .Select-menu-outer {
+.theme-dark .select-3JqNgs .Select-menu-outer {
     background: black;
     border: none;
     box-shadow: none;
@@ -458,7 +458,7 @@ a img {
     background-color: transparent !important;
     border: 1px solid #10b51d !important;
 }
-.theme-dark .ui-select>.Select .Select-control .Select-placeholder {
+.theme-dark .select-3JqNgs .Select-control .Select-placeholder {
     color: #10b51d;
     border: 1px solid #10b51d;
 }
@@ -1699,7 +1699,7 @@ a {
     padding-top: 9px;
     padding-bottom: 7px;
 }
-.theme-dark .quickMessage-28pD5Y {
+.theme-dark .quickMessage-OCo-Q0 {
     background-color: transparent;
     color: #10b51d;
     padding-top: 9px;
@@ -1740,7 +1740,7 @@ a {
     color: white;
     text-transform: capitalize;
 }
-.topSectionNormal-2LlRG1 {
+.theme-dark .topSectionNormal-2LlRG1 {
     background-color: rgba(0, 0, 0, 0.4);
 }
 .wrapper-2xO9RX,
@@ -1989,10 +1989,10 @@ a {
    background: #28BC34;
    color: white !important;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     background: black;
 }
-.theme-dark .contextMenu-uoJTbz {
+.theme-dark.contextMenu-uoJTbz {
     box-shadow: none;
     border: none;
 }
